added fetch quotes and loader

--- a/1-quote-generator/style.css
+++ b/1-quote-generator/style.css
@@ -19,7 +19,7 @@ body{
   justify-content: center;
 }
 
-.qoute-container {
+.quote-container {
   width: auto;
   max-width: 900px;
   padding: 20px 30px;
@@ -84,6 +84,27 @@ button:active{
 
 .fa-twitter{
   font-size: 1.5rem;
+}
+
+.loader {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  border: 12px solid #f3f3f3;
+  border-top: 12px solid #333;
+  animation: spinner 1s linear infinite;
+  position: fixed;
+  left: 50%;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 
