--- a/3-picture-in-picture/style.css
+++ b/3-picture-in-picture/style.css
@@ -15,7 +15,7 @@ body{
   background: rgb(37,37,37);
 }
 
-.button-container{
+.button-container, .select-screen-button-container{
   border: 2px solid black;
   padding: 10px;
   border-radius: 7px;
@@ -25,7 +25,7 @@ body{
 button {
   cursor: pointer;
   outline: none;
-  width: 120px;
+  width: 200px;
   height: 75px;
   font-family: Barlow, sans-serif;
   font-size: 25px;
