--- a/24-snake-ladder-game/style.css
+++ b/24-snake-ladder-game/style.css
@@ -1,4 +1,16 @@
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(10, auto);
+  grid-template-columns: repeat(1, auto);
+  grid-auto-flow: dense;
+}
+
+.box {
+  width: 100px;
+  height: 100px;
+  box-shadow: 0 0 0 1px #333333;
+  border: 1px solid #333333;
+  cursor: pointer;
+  font-size: 40px;
+  text-align: center;
+  display: inline-block;
 }
