--- a/24-snake-ladder-game/style.css
+++ b/24-snake-ladder-game/style.css
@@ -1,9 +1,3 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(1, auto);
-  grid-auto-flow: dense;
-}
-
 .game-container {
   display: flex;
   justify-content: center;
@@ -14,7 +8,7 @@
 .header {
   display: flex;
   align-items: center;
-  width: 620px;
+  width: 800px;
   justify-content: space-between;
 }
 
@@ -51,4 +45,8 @@
 button {
   padding: 10px 20px;
   cursor: pointer;
+}
+
+#player-turn {
+  color: red;
 }
