--- a/24-snake-ladder-game/style.css
+++ b/24-snake-ladder-game/style.css
@@ -25,16 +25,15 @@
 }
 
 .circle {
-  width: 7px;
-  height: 7px;
   border-radius: 50%;
-  padding: 10px;
+  padding: 12px;
   font-size: 10px;
   text-align: center;
 }
 
 .red-dot {
-  background-color: yellow;
+  background-color: blue;
+  color: white;
   position: relative;
 }
 
@@ -49,21 +48,21 @@ button {
 }
 
 #player-turn {
-  color: red;
+  color: blue;
 }
 
 .dice-container {
   width: 100px;
   height: 100px;
   border-radius: 12px;
-  background-color: black;
+  background-color: red;
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
 
 .white-dot {
-  background-color: white;
+  background-color: black;
 }
 
 .dice-dot {
