--- a/26-todo-list/style.css
+++ b/26-todo-list/style.css
@@ -27,7 +27,7 @@
 
 .tasks {
   margin-top: 10px;
-  background: rgb(233, 243, 234);
+  /* background: rgb(233, 243, 234); */
   padding: 20px;
   border-radius: 4px;
   cursor: pointer;
@@ -61,4 +61,38 @@
 
 .add-button:active {
   transform: translateY(1px);
+}
+
+.modal {
+  border: 1px solid rgb(172, 164, 164);
+  background: rgb(238, 246, 238);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 600px;
+  padding: 40px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+}
+
+#modal-input {
+  width: 300px;
+  height: 30px;
+  margin-bottom: 20px;
+  border: 1px solid rgb(87, 86, 86);
+  border-radius: 4px;
+  font-size: 18px;
+}
+
+#modal-select {
+  width: 300px;
+  height: 30px;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 4px;
+  font-size: 18px;
 }
